test: remove old m1 test and replace by `macos-14`
Thanks GitHub!

Work in Progress...

--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -204,7 +204,7 @@ jobs:
       fail-fast: false
       matrix:
         feature: [pm2]
-        clientEngine: [library] # ['library', 'binary']
+        clientEngine: [library]
         os: [ubuntu-20.04, windows-latest, macos-latest]
     runs-on: ${{ matrix.os }}
 
@@ -420,7 +420,7 @@ jobs:
             generate-client-install-on-sub-project-yarn,
           ]
         clientEngine: ['library', 'binary']
-        os: [ubuntu-20.04] #, windows-latest, macos-latest]
+        os: [ubuntu-20.04]
     runs-on: ${{ matrix.os }}
 
     steps:
@@ -634,7 +634,7 @@ jobs:
         node:
           - 16.13
         clientEngine: ['library', 'binary']
-        os: [ubuntu-20.04] #, windows-latest, macos-latest]
+        os: [ubuntu-20.04]
     runs-on: ${{ matrix.os }}
 
     steps:
@@ -692,7 +692,7 @@ jobs:
           - 20
           - 21
         clientEngine: ['library', 'binary']
-        os: [ubuntu-20.04] #, windows-latest, macos-latest]
+        os: [ubuntu-20.04]
     runs-on: ${{ matrix.os }}
 
     steps:
@@ -805,7 +805,7 @@ jobs:
           - yarn3-without-pnp
           - yarn3-workspaces-pnp
         clientEngine: [library] #['library', 'binary']
-        os: [ubuntu-20.04] #, windows-latest, macos-latest]
+        os: [ubuntu-20.04]
     runs-on: ${{ matrix.os }}
 
     env:
@@ -875,7 +875,7 @@ jobs:
           - nextjs
           - sveltekit
         clientEngine: [library] #['library', 'binary']
-        os: [ubuntu-20.04] #, windows-latest, macos-latest]
+        os: [ubuntu-20.04]
     runs-on: ${{ matrix.os }}
 
     steps:
@@ -927,9 +927,8 @@ jobs:
         platform:
           - heroku
           - aws-graviton
-          - m1-macstadium
         clientEngine: ['library', 'binary']
-        os: [ubuntu-20.04] #, windows-latest, macos-latest]
+        os: [ubuntu-20.04]
     runs-on: ${{ matrix.os }}
     # concurrency: ${{ github.job }}-${{ matrix.platform }}-${{ matrix.clientEngine }}
     concurrency: ${{ matrix.platform }}
@@ -937,7 +936,6 @@ jobs:
     env:
       HEROKU_API_KEY: ${{ secrets.HEROKU_API_KEY }}
       SSH_KEY_GRAVITON: ${{ secrets.SSH_KEY_GRAVITON }}
-      SSH_KEY_M1_MACSTADIUM: ${{ secrets.SSH_KEY_M1_MACSTADIUM }}
 
     steps:
       - uses: actions/checkout@v4
@@ -997,7 +995,7 @@ jobs:
           - azure-functions-windows
           - serverless-framework-lambda
         clientEngine: ['library', 'binary']
-        os: [ubuntu-20.04] #, windows-latest, macos-latest]
+        os: [ubuntu-20.04]
         exclude:
           # Node-API w/ 32 bit Node by default, see https://github.com/prisma/prisma/issues/6905
           - clientEngine: library
@@ -1089,7 +1087,7 @@ jobs:
           - vercel-with-nextjs
           - vercel-with-nextjs-caching
         clientEngine: ['library', 'binary']
-        os: [ubuntu-20.04] #, windows-latest, macos-latest]
+        os: [ubuntu-20.04]
     runs-on: ${{ matrix.os }}
     concurrency: ${{ github.job }}-${{ matrix.platform }}-${{ matrix.clientEngine }}
     env:
@@ -1425,7 +1423,7 @@ jobs:
           - nodejs-mongodb-logs
           - nodejs-tracing
         clientEngine: [<accelerate>] # value for script logic
-        os: [ubuntu-20.04] #, windows-latest, macos-latest]
+        os: [ubuntu-20.04]
     runs-on: ${{ matrix.os }}
     concurrency: ${{ github.job }}-${{ matrix.platform }}-${{ matrix.clientEngine }}
     env:
@@ -1523,7 +1521,7 @@ jobs:
           - parcel
           - rollup
         clientEngine: [library] #['library', 'binary']
-        os: [ubuntu-20.04] #, windows-latest, macos-latest]
+        os: [ubuntu-20.04]
     runs-on: ${{ matrix.os }}
 
     steps:
@@ -1576,7 +1574,7 @@ jobs:
           - apollo-server
           - type-graphql
         clientEngine: [library] #['library', 'binary']
-        os: [ubuntu-20.04] #, windows-latest, macos-latest]
+        os: [ubuntu-20.04]
     runs-on: ${{ matrix.os }}
 
     steps:
@@ -1645,7 +1643,7 @@ jobs:
           - planetscale
           - cockroach-cloud
         clientEngine: ['library', 'binary']
-        os: [ubuntu-20.04] #, windows-latest, macos-latest]
+        os: [ubuntu-20.04]
 
     runs-on: ${{ matrix.os }}
 
@@ -1711,7 +1709,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        clientEngine: [library] # ['library', 'binary']
+        clientEngine: [library]
         database:
           - sqlserver-azure-sql
         os: [macos-latest]
@@ -1760,7 +1758,7 @@ jobs:
         test-runner:
           - jest-with-multiple-generators
         clientEngine: ['library', 'binary']
-        os: [ubuntu-20.04] #, windows-latest, macos-latest]
+        os: [ubuntu-20.04]
     runs-on: ${{ matrix.os }}
 
     steps:
