--- a/driver-adapters-wasm/pg-cfpages-basic/package.json
+++ b/driver-adapters-wasm/pg-cfpages-basic/package.json
@@ -10,7 +10,7 @@
     "jest": "28.1.3",
     "node-fetch": "2.7.0",
     "prisma": "5.10.0-dev.4",
-    "wrangler": "https://prerelease-registry.devprod.cloudflare.dev/workers-sdk/runs/6711485115/npm-package-wrangler-2541"
+    "wrangler": "3.24.0"
   },
   "dependencies": {
     "@prisma/adapter-pg": "5.10.0-dev.4",
