use pg-worker instead of pg

--- a/driver-adapters-wasm/pg-cfpages-basic/package.json
+++ b/driver-adapters-wasm/pg-cfpages-basic/package.json
@@ -15,8 +15,8 @@
     "wrangler": "3.26.0"
   },
   "dependencies": {
-    "@prisma/adapter-pg": "5.10.0-dev.4",
+    "@prisma/adapter-pg": "5.8.0-integration-feat-prisma-pg-worker.1",
     "@prisma/client": "5.10.0-dev.4",
-    "pg": "8.11.3"
+    "@prisma/pg-worker": "5.8.0-integration-feat-prisma-pg-worker.1"
   }
 }
