--- a/platforms-serverless-vercel/vercel-with-redwood/package.json
+++ b/platforms-serverless-vercel/vercel-with-redwood/package.json
@@ -33,5 +33,6 @@
   "dependencies": {
     "@prisma/client": "5.10.0-dev.69",
     "prisma": "5.10.0-dev.69"
-  }
+  },
+  "packageManager": "yarn@3.8.0"
 }
