temp: Replace Neon with Vercel Postgres in neon-lambda-basic

--- a/driver-adapters/neon-lambda-basic/package.json
+++ b/driver-adapters/neon-lambda-basic/package.json
@@ -13,9 +13,9 @@
     "prisma": "5.11.0-dev.6"
   },
   "dependencies": {
-    "@neondatabase/serverless": "0.8.1",
     "@prisma/adapter-neon": "5.11.0-dev.6",
     "@prisma/client": "5.11.0-dev.6",
+    "@vercel/postgres": "^0.7.2",
     "undici": "6.6.2"
   }
 }
