--- a/driver-adapters-wasm/neon-cf-basic/package.json
+++ b/driver-adapters-wasm/neon-cf-basic/package.json
@@ -8,13 +8,13 @@
   "devDependencies": {
     "@jest/globals": "29.7.0",
     "jest": "28.1.3",
+    "node-fetch": "2.7.0",
     "prisma": "5.11.0-dev.6",
-    "wrangler": "3.28.3",
-    "node-fetch": "2.7.0"
+    "wrangler": "3.28.3"
   },
   "dependencies": {
-    "@neondatabase/serverless": "0.8.1",
     "@prisma/adapter-neon": "5.11.0-dev.6",
-    "@prisma/client": "5.11.0-dev.6"
+    "@prisma/client": "5.11.0-dev.6",
+    "@vercel/postgres": "^0.7.2"
   }
 }
