try to trick peer dependency

--- a/driver-adapters/neon-lambda-basic/package.json
+++ b/driver-adapters/neon-lambda-basic/package.json
@@ -15,7 +15,7 @@
   "dependencies": {
     "@prisma/adapter-neon": "5.11.0-dev.6",
     "@prisma/client": "5.11.0-dev.6",
-    "@vercel/postgres": "^0.7.2",
+    "@neondatabase/serverless": "npm:@vercel/postgres@^0.7.2",
     "undici": "6.6.2"
   }
 }
