--- a/driver-adapters-wasm/neon-cf-basic/package.json
+++ b/driver-adapters-wasm/neon-cf-basic/package.json
@@ -15,6 +15,6 @@
   "dependencies": {
     "@prisma/adapter-neon": "5.11.0-dev.6",
     "@prisma/client": "5.11.0-dev.6",
-    "@vercel/postgres": "^0.7.2"
+    "@neondatabase/serverless": "npm:@vercel/postgres@^0.7.2"
   }
 }
