--- a/driver-adapters/neon-lambda-basic/package.json
+++ b/driver-adapters/neon-lambda-basic/package.json
@@ -13,9 +13,9 @@
     "prisma": "5.11.0-dev.6"
   },
   "dependencies": {
-    "@prisma/adapter-neon": "5.11.0-dev.6",
+    "@prisma/adapter-neon": "5.11.0-integration-chore-adapter-neon-remove-pool-check.1",
     "@prisma/client": "5.11.0-dev.6",
-    "@neondatabase/serverless": "npm:@vercel/postgres@^0.7.2",
+    "@vercel/postgres": "^0.7.2",
     "undici": "6.6.2"
   }
 }
