--- a/driver-adapters-wasm/neon-cf-basic/package.json
+++ b/driver-adapters-wasm/neon-cf-basic/package.json
@@ -13,7 +13,7 @@
     "wrangler": "3.28.3"
   },
   "dependencies": {
-    "@prisma/adapter-neon": "5.11.0-dev.6",
+    "@prisma/adapter-neon": "5.11.0-integration-chore-adapter-neon-remove-pool-check.1",
     "@prisma/client": "5.11.0-dev.6",
     "@neondatabase/serverless": "npm:@vercel/postgres@^0.7.2"
   }
