back to real @vercel/postgres

--- a/driver-adapters-wasm/neon-cf-basic/package.json
+++ b/driver-adapters-wasm/neon-cf-basic/package.json
@@ -15,6 +15,6 @@
   "dependencies": {
     "@prisma/adapter-neon": "5.11.0-integration-chore-adapter-neon-remove-pool-check.1",
     "@prisma/client": "5.11.0-dev.6",
-    "@neondatabase/serverless": "npm:@vercel/postgres@^0.7.2"
+    "@vercel/postgres": "^0.7.2"
   }
 }
