--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -1339,7 +1339,9 @@ jobs:
           - pg-node-basic
           - pg-node-basic-esm
           - pg-cf-basic
+          - pg-worker-cf-basic
           - pg-cfpages-basic
+          - pg-worker-cfpages-basic
           - neon-http-cf-basic
           - neon-http-vercel-nextjs-edgemw
           - neon-cf-basic
