--- a/driver-adapters-wasm/d1-cfpages-basic/package.json
+++ b/driver-adapters-wasm/d1-cfpages-basic/package.json
@@ -13,7 +13,7 @@
     "wrangler": "3.28.3"
   },
   "dependencies": {
-    "@prisma/adapter-d1": "5.11.0-integration-fix-non-ascii.1",
+    "@prisma/adapter-d1": "5.11.0-dev.8",
     "@prisma/client": "5.11.0-dev.8"
   }
 }
