--- a/driver-adapters-wasm/pg-worker-cf-basic/package.json
+++ b/driver-adapters-wasm/pg-worker-cf-basic/package.json
@@ -9,13 +9,13 @@
     "@jest/globals": "29.7.0",
     "jest": "28.1.3",
     "node-fetch": "2.7.0",
-    "prisma": "5.11.0-integration-feat-prisma-pg-worker.18",
+    "prisma": "",
     "wrangler": "3.28.3"
   },
   "dependencies": {
-    "@prisma/adapter-pg-worker": "5.11.0-integration-feat-prisma-pg-worker.18",
-    "@prisma/client": "5.11.0-integration-feat-prisma-pg-worker.18",
+    "@prisma/adapter-pg-worker": "5.11.0-dev.12",
+    "@prisma/client": "5.11.0-dev.12",
     "add": "^2.0.6",
-    "@prisma/pg-worker": "5.11.0-integration-feat-prisma-pg-worker.18"
+    "@prisma/pg-worker": "5.11.0-dev.12"
   }
 }
