--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -1339,6 +1339,7 @@ jobs:
           - pg-node-basic
           - pg-node-basic-esm
           - pg-cf-basic
+          - pg-cf-hyperdrive
           - pg-worker-cf-basic
           - pg-cfpages-basic
           - pg-worker-cfpages-basic
