--- a/driver-adapters-wasm/pg-worker-cf-basic/wrangler.base.toml
+++ b/driver-adapters-wasm/pg-worker-cf-basic/wrangler.base.toml
@@ -1,7 +1,7 @@
-name = "pg-cf-basic"
+name = "pg-worker-cf-basic"
 main = "src/index.js"
 compatibility_date = "2023-10-30"
-compatibility_flags = [ "nodejs_compat" ]
+compatibility_flags = ["nodejs_compat"]
 
 # Note: prepare.sh will append the env vars at the end
 [vars]
