--- a/community-generators/prisma-json-schema-generator/package.json
+++ b/community-generators/prisma-json-schema-generator/package.json
@@ -9,7 +9,7 @@
   },
   "dependencies": {
     "@prisma/client": "5.11.0-dev.19",
-    "jest": "^28.0.0"
+    "jest": "29.7.0"
   },
   "scripts": {
     "test": "jest"
