Add remix on cloudflare test

--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -1346,6 +1346,7 @@ jobs:
           - neon-http-cf-basic
           - neon-http-vercel-nextjs-edgemw
           - neon-cf-basic
+          - neon-cf-remix
           - neon-cfpages-basic
           - neon-node-nextjs-edgemw
           - neon-vercel-nextjs-edgemw
