Add pages project

--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -1348,6 +1348,7 @@ jobs:
           - neon-cf-basic
           - neon-cf-remix
           - neon-cfpages-basic
+          - neon-cfpages-remix
           - neon-node-nextjs-edgemw
           - neon-vercel-nextjs-edgemw
           - neon-vercel-nextjs-pages-edgefn
