chore(renovate): add d1 to ignoreDeps

--- a/renovate.json
+++ b/renovate.json
@@ -12,7 +12,16 @@
   "prConcurrentLimit": 17,
   "rebaseWhen": "auto",
   "configMigration": true,
-  "ignoreDeps": ["prisma", "@prisma/client", "@prisma/instrumentation", "@prisma/adapter-planetscale", "@prisma/adapter-pg", "@prisma/adapter-neon", "@prisma/adapter-libsql"],
+  "ignoreDeps": [
+    "prisma",
+    "@prisma/client",
+    "@prisma/instrumentation",
+    "@prisma/adapter-planetscale",
+    "@prisma/adapter-pg",
+    "@prisma/adapter-neon",
+    "@prisma/adapter-libsql",
+    "@prisma/adapter-d1"
+  ],
   "packageRules": [
     {
       "groupName": "svelte packages",
