--- a/renovate.json
+++ b/renovate.json
@@ -18,6 +18,8 @@
     "@prisma/instrumentation",
     "@prisma/adapter-planetscale",
     "@prisma/adapter-pg",
+    "@prisma/adapter-pg-worker",
+    "@prisma/pg-worker",
     "@prisma/adapter-neon",
     "@prisma/adapter-libsql",
     "@prisma/adapter-d1"
@@ -50,18 +52,12 @@
     },
     {
       "groupName": "TypeScript < 4.9.5 - typegraphql-prisma & firebase",
-      "matchFileNames": [
-        "community-generators/typegraphql-prisma/**",
-        "platforms-serverless/firebase-functions/**"
-      ],
+      "matchFileNames": ["community-generators/typegraphql-prisma/**", "platforms-serverless/firebase-functions/**"],
       "matchPackageNames": ["typescript"]
     },
     {
       "groupName": "GraphQL 15 - TypeGraphQL",
-      "matchFileNames": [
-        "libraries/type-graphql/**",
-        "community-generators/typegraphql-prisma/**"
-      ],
+      "matchFileNames": ["libraries/type-graphql/**", "community-generators/typegraphql-prisma/**"],
       "matchPackageNames": ["graphql"],
       "allowedVersions": "<16"
     }
