--- a/platforms-serverless/firebase-functions/functions/package.json
+++ b/platforms-serverless/firebase-functions/functions/package.json
@@ -16,6 +16,7 @@
     "firebase-functions": "4.8.2"
   },
   "devDependencies": {
+    "@types/node": "16.18.94",
     "firebase-functions-test": "3.1.1",
     "prisma": "5.13.0-dev.12",
     "ts-node": "10.9.2",
