--- a/community-generators/typegraphql-prisma/package.json
+++ b/community-generators/typegraphql-prisma/package.json
@@ -15,13 +15,13 @@
     "@prisma/client": "5.13.0-dev.12",
     "@apollo/server": "4.0.0",
     "class-validator": "0.14.1",
-    "graphql": "15.8.0",
+    "graphql": "16.8.1",
     "graphql-fields": "2.0.3",
     "graphql-scalars": "1.23.0",
     "graphql-type-json": "0.3.2",
     "reflect-metadata": "0.2.2",
     "tslib": "2.6.2",
-    "type-graphql": "1.1.1"
+    "type-graphql": "2.0.0-beta.6"
   },
   "scripts": {
     "start": "ts-node index.ts"
