--- a/libraries/type-graphql/package.json
+++ b/libraries/type-graphql/package.json
@@ -6,15 +6,16 @@
     "dev": "ts-node-dev --no-notify --respawn --transpileOnly src/server"
   },
   "dependencies": {
-    "@prisma/client": "5.13.0-dev.12",
-    "@types/graphql": "14.5.0",
     "@apollo/server": "4.10.2",
+    "@prisma/client": "5.13.0-dev.12",
     "class-validator": "0.14.1",
-    "graphql": "15.8.0",
+    "graphql": "16.8.1",
     "reflect-metadata": "0.2.2",
-    "type-graphql": "1.1.1"
+    "type-graphql": "2.0.0-beta.6"
   },
   "devDependencies": {
+    "@types/express": "4.17.2",
+    "@types/express-serve-static-core": "4.17.21",
     "@types/node": "16.18.94",
     "prisma": "5.13.0-dev.12",
     "ts-node": "10.9.2",
