ci(engine-types): pin runner to macos-13
macos-13 needs to be pinned because engine-types test needs to be updated before running on macos-14 because the engines names are different because macos-latest is now arm64 / M1 CPU

--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -534,7 +534,10 @@ jobs:
       fail-fast: false
       matrix:
         feature: [engine-types, engine-native-deps]
-        os: [ubuntu-20.04, windows-latest, macos-latest]
+        # macos-13 is pinned because engine-types test
+        # need to be updated before running on macos-14 because the engines
+        # names are different because it's arm64 / m1
+        os: [ubuntu-20.04, windows-latest, macos-13]
         exclude:
           - feature: engine-native-deps
             os: windows-latest
