--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -536,7 +536,7 @@ jobs:
         feature: [engine-types, engine-native-deps]
         # macos-13 is pinned because engine-types test
         # need to be updated before running on macos-14 because the engines
-        # names are different because it's arm64 / m1
+        # names are different because macos-latest is now arm64 / M1 CPU
         os: [ubuntu-20.04, windows-latest, macos-13]
         exclude:
           - feature: engine-native-deps
