test(heroku-*): pin pnpm to v8
Default (latest) is now v9 when installed via corepack

--- a/platforms/heroku/package.json
+++ b/platforms/heroku/package.json
@@ -15,5 +15,8 @@
   "dependencies": {
     "@prisma/client": "5.14.0-dev.71",
     "express": "^4.17.1"
+  },
+  "engines": {
+    "pnpm": "8"
   }
 }
