--- a/databases/heroku-pgbouncer-buildpack/package.json
+++ b/databases/heroku-pgbouncer-buildpack/package.json
@@ -16,7 +16,5 @@
     "prisma": "5.14.0-dev.72",
     "ts-node": "10.9.2"
   },
-  "engines": {
-    "pnpm": "8.15.5"
-  }
+  "packageManager": "pnpm@8.15.5"
 }
