--- a/platforms/heroku/package.json
+++ b/platforms/heroku/package.json
@@ -16,7 +16,5 @@
     "@prisma/client": "5.14.0-dev.72",
     "express": "^4.17.1"
   },
-  "engines": {
-    "pnpm": "8.15.5"
-  }
+  "packageManager": "pnpm@8.15.5"
 }
