--- a/databases/heroku-pgbouncer/package.json
+++ b/databases/heroku-pgbouncer/package.json
@@ -16,7 +16,5 @@
     "jest": "29.7.0",
     "prisma": "5.14.0-dev.72"
   },
-  "engines": {
-    "pnpm": "8.15.5"
-  }
+  "packageManager": "pnpm@8.15.5"
 }
