add pnpm prisma generate

--- a/platforms/heroku/package.json
+++ b/platforms/heroku/package.json
@@ -10,7 +10,7 @@
     "ts-node": "10.9.2"
   },
   "scripts": {
-    "start": "node index.js"
+    "start": "pnpm prisma generate && node index.js"
   },
   "dependencies": {
     "@prisma/client": "5.14.0-dev.72",
