--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -1867,7 +1867,7 @@ jobs:
     needs: [detect_jobs_to_run]
     if: contains(fromJSON(needs.detect_jobs_to_run.outputs.jobs), 'runtimes')
 
-    timeout-minutes: 10
+    timeout-minutes: 2
     strategy:
       fail-fast: false
       matrix:
@@ -1877,7 +1877,7 @@ jobs:
         clientEngine: ['library', 'binary']
         os: [ubuntu-20.04]
     runs-on: ${{ matrix.os }}
-    concurrency: ${{ github.job }}-${{ matrix.runtime }}-${{ matrix.clientEngine }}
+    # concurrency: ${{ github.job }}-${{ matrix.runtime }}-${{ matrix.clientEngine }}
     env:
       RUNTIMES_DENO_DATABASE_URL: ${{ secrets.DATAPROXY_COMMON_URL_SOURCE }}
 
