--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -1902,8 +1902,8 @@ jobs:
       - name: Define Client Engine Type to test
         run: echo "PRISMA_CLIENT_ENGINE_TYPE=${{ matrix.clientEngine }}" >> $GITHUB_ENV
 
-      - name: Install Dependencies
-        run: pnpm install
+      # - name: Install Dependencies
+      #   run: pnpm install
 
       - name: test ${{ matrix.runtime }}
         run: bash .github/scripts/test-project.sh ${{ github.job }} ${{ matrix.runtime }}
