--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -1872,14 +1872,15 @@ jobs:
       fail-fast: false
       matrix:
         runtime:
-          - deno
-          #- bun
+          #- deno
+          - bun
         clientEngine: ['library', 'binary']
         os: [ubuntu-20.04]
     runs-on: ${{ matrix.os }}
     concurrency: ${{ github.job }}-${{ matrix.runtime }}-${{ matrix.clientEngine }}
     env:
       RUNTIMES_DENO_DATABASE_URL: ${{ secrets.DATAPROXY_COMMON_URL_SOURCE }}
+      RUNTIMES_BUN_DATABASE_URL: ${{ secrets.DATAPROXY_COMMON_URL_SOURCE }}
 
     steps:
       - uses: actions/checkout@v4
@@ -1899,11 +1900,15 @@ jobs:
         with:
           deno-version: v1.38.2
 
+      - uses: oven-sh/setup-bun@v1
+        with:
+          bun-version: 1.1.8
+
       - name: Define Client Engine Type to test
         run: echo "PRISMA_CLIENT_ENGINE_TYPE=${{ matrix.clientEngine }}" >> $GITHUB_ENV
 
       - name: Install Dependencies
-        run: pnpm install
+        run: bun install
 
       - name: test ${{ matrix.runtime }}
         run: bash .github/scripts/test-project.sh ${{ github.job }} ${{ matrix.runtime }}
