--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -1885,15 +1885,15 @@ jobs:
     steps:
       - uses: actions/checkout@v4
 
-      - uses: pnpm/action-setup@v3.0.0
-        with:
-          version: 8
+      # - uses: pnpm/action-setup@v3.0.0
+      #   with:
+      #     version: 8
 
       - uses: actions/setup-node@v4
         with:
           node-version: 16
-          cache: 'pnpm'
-          cache-dependency-path: ${{ github.job }}/${{ matrix.runtime }}/pnpm-lock.yaml
+          # cache: 'pnpm'
+          # cache-dependency-path: ${{ github.job }}/${{ matrix.runtime }}/pnpm-lock.yaml
 
       - name: use deno v1.x
         uses: denoland/setup-deno@v1
