--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -1884,9 +1884,9 @@ jobs:
     steps:
       - uses: actions/checkout@v4
 
-      # - uses: pnpm/action-setup@v3.0.0
-      #   with:
-      #     version: 8
+      - uses: pnpm/action-setup@v3.0.0
+        with:
+          version: 8
 
       - uses: actions/setup-node@v4
         with:
