--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -1374,7 +1374,7 @@ jobs:
     runs-on: ${{ matrix.os }}
     # To avoid race conditions when running tests, we need to avoid concurrency
     # The tests should not be run concurrently for a given "combo"
-    # Example: 2 concurrent runs of "turso-node-basic" will share the same database,
+    # Example: 2 concurrent runs of "turso-vercel-nextjs-edgemw" will share the same database,
     # which causes failures in the test expectation
     concurrency: ${{ matrix.combo }}
     env:
