chore: DEBUG: 'prisma:driver-adapter*'

--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -1257,7 +1257,7 @@ jobs:
       AWS_ROLE: ${{ vars.AWS_ROLE }}
       CLOUDFLARE_ACCOUNT_ID: ${{ vars.CLOUDFLARE_ACCOUNT_ID }}
       CLOUDFLARE_API_TOKEN: ${{ secrets.CLOUDFLARE_API_TOKEN }}
-      DEBUG: 'prisma:js-connector*'
+      DEBUG: 'prisma:driver-adapter*'
       PRISMA_DISABLE_QUAINT_EXECUTORS: true
       # neon http
       DRIVER_ADAPTERS_NEON_HTTP_LAMBDA_BASIC_DATABASE_URL: ${{ secrets.DRIVER_ADAPTERS_NEON_HTTP_LAMBDA_BASIC_DATABASE_URL }}
@@ -1415,7 +1415,7 @@ jobs:
       DRIVER_ADAPTERS_TURSO_VERCEL_NEXTJS_EDGEMW_TOKEN: ${{ secrets.DRIVER_ADAPTERS_TURSO_VERCEL_NEXTJS_EDGEMW_TOKEN }}
       DRIVER_ADAPTERS_TURSO_VERCEL_NEXTJS_EDGEMW_PROJECT_ID: ${{ vars.DRIVER_ADAPTERS_TURSO_VERCEL_NEXTJS_EDGEMW_PROJECT_ID }}
       # settings
-      DEBUG: 'prisma:js-connector*'
+      DEBUG: 'prisma:driver-adapter*'
       PRISMA_DISABLE_QUAINT_EXECUTORS: true
 
     steps:
