fix detect-jobs-to-run test

--- a/.github/workflows/check-test-suite-coverage.yaml
+++ b/.github/workflows/check-test-suite-coverage.yaml
@@ -33,4 +33,4 @@ jobs:
         run: node .github/scripts/check-folders.js
 
       - name: run detect-jobs-to-run tests
-        run: pnpm exec jest detect-jobs-to-run
+        run: pnpm run test:detect-jobs-to-run
