--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "update-all": "scripts/update-all.sh",
     "update-project": "scripts/update-project.sh",
     "reset-lockfiles": "git restore --source=origin/dev 'pnpm-lock.yaml'; git restore --source=origin/dev 'yarn.lock'; git restore --source=origin/dev 'package-lock.json'; git restore --source=origin/dev 'prisma-version.txt'",
-    "reset-json-and-lockfiles": "pnpm reset-lockfiles; git restore --source=origin/dev '*.json'"
+    "reset-json-and-lockfiles": "pnpm reset-lockfiles; git restore --source=origin/dev '*.json'",
+    "test:detect-jobs-to-run": "pnpm exec jest detect-jobs-to-run"
   }
 }
