--- a/renovate.json
+++ b/renovate.json
@@ -1,7 +1,7 @@
 {
   "$schema": "https://docs.renovatebot.com/renovate-schema.json",
   "extends": ["config:recommended", ":noUnscheduledUpdates"],
-  "reviewers": ["@Jolg42", "@millsp", "@aqrln", "@SevInf", "@jkomyno"],
+  "reviewers": ["@prisma/orm-ts-maintain"],
   "schedule": ["after 5:00am every weekday, before 7:00am every weekday", "every weekend"],
   "automergeSchedule": ["before 7am every weekday"],
   "automerge": true,
