--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -2,5 +2,5 @@
 
 # These owners will be the default owners for everything in
 # the repo. Unless a later match takes precedence,
-*                                @janpio @Jolg42 @SevInf @jkomyno
+*                                @janpio @prisma/orm-ts-maintain
 
