add new test to gh action workflow

--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -226,6 +226,7 @@ jobs:
           - turso-node-basic-esm
           - turso-vercel-nextjs
           - tidb-node-basic
+          - pglite-node-basic
         clientEngine: ['library']
         os: [ubuntu-20.04]
     runs-on: ${{ matrix.os }}
