chore: add d1-cfpages-nuxt to test workflow

--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -365,6 +365,7 @@ jobs:
           - turso-vercel-nextjs-edgemw
           - d1-cf-basic
           - d1-cfpages-basic
+          - d1-cfpages-nuxt
         clientEngine: ['wasm']
         os: [ubuntu-20.04]
     runs-on: ${{ matrix.os }}
