chore: add test script

--- a/driver-adapters-wasm/d1-cfpages-nuxt/package.json
+++ b/driver-adapters-wasm/d1-cfpages-nuxt/package.json
@@ -11,7 +11,8 @@
     "dev": "nuxt dev",
     "generate": "nuxt generate",
     "preview": "nuxt preview",
-    "postinstall": "nuxt prepare"
+    "postinstall": "nuxt prepare",
+    "test": "jest index.test.js"
   },
   "dependencies": {
     "@prisma/adapter-d1": "5.15.0-dev.73",
@@ -22,6 +23,8 @@
   },
   "devDependencies": {
     "@cloudflare/workers-types": "^4.20240524.0",
+    "@jest/globals": "29.7.0",
+    "jest": "29.7.0",
     "nitro-cloudflare-dev": "^0.1.4",
     "prisma": "5.15.0-dev.73",
     "wrangler": "^3.57.1"
