--- a/driver-adapters/pglite-node-basic/package.json
+++ b/driver-adapters/pglite-node-basic/package.json
@@ -2,20 +2,22 @@
   "name": "pglite-node-basic",
   "version": "0.1.0",
   "private": true,
+  "type": "module",
   "scripts": {
-    "test": "jest index.test.js"
+    "test": "NODE_OPTIONS=--experimental-vm-modules jest"
   },
   "devDependencies": {
     "@jest/globals": "29.7.0",
+    "@types/jest": "29.5.12",
     "jest": "29.7.0",
-    "prisma": "5.15.0-dev.73"
+    "prisma": "5.15.0-dev.73",
+    "ts-jest": "29.1.4",
+    "typescript": "^5.4.5"
   },
   "dependencies": {
     "@electric-sql/pglite": "^0.1.5",
     "@prisma/client": "5.15.0-dev.73",
-    "@types/jest": "29.5.12",
     "pglite-prisma-adapter": "^0.1.3",
-    "ts-jest": "29.1.4",
     "ts-node": "10.9.2",
     "tsx": "^4.11.2"
   }
