--- a/driver-adapters-wasm/d1-cfpages-nuxt/tsconfig.json
+++ b/driver-adapters-wasm/d1-cfpages-nuxt/tsconfig.json
@@ -1,4 +1,10 @@
 {
   // https://nuxt.com/docs/guide/concepts/typescript
-  "extends": "./.nuxt/tsconfig.json"
+  "extends": "./.nuxt/tsconfig.json",
+  "compilerOptions": {
+    "types": [
+      "@nuxt/types",
+      "@cloudflare/workers-types"
+    ]
+  }
 }
