--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -1897,7 +1897,7 @@ jobs:
       - name: use deno v1.x
         uses: denoland/setup-deno@v1
         with:
-          deno-version: canary
+          deno-version: v1.44.2
 
       - name: Define Client Engine Type to test
         run: echo "PRISMA_CLIENT_ENGINE_TYPE=${{ matrix.clientEngine }}" >> $GITHUB_ENV
