--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -1741,6 +1741,9 @@ jobs:
     steps:
       - uses: actions/checkout@v4
       
+      - name: Define Client Engine Type to test
+        run: echo "PRISMA_CLIENT_ENGINE_TYPE=${{ matrix.clientEngine }}" >> $GITHUB_ENV
+        
       - uses: pnpm/action-setup@v3.0.0
         with:
           version: 8
@@ -1750,27 +1753,10 @@ jobs:
           node-version: 16
           cache: 'pnpm'
           
+          cache-dependency-path: ${{ github.job }}/${{ matrix.feature }}/pnpm-lock.yaml
+     
      - name: Install Dependencies
         run: pnpm install
-
-      - name: Set test specific DATABASE_URL
-        run: |
-          string=${{ env.DATABASE_URL_POSTGRES_TEMPLATE }}
-          search=database
-          replace=${{ github.job }}_${{ matrix.feature }}_${{ matrix.os }}_${{ matrix.clientEngine }}
-          replaced=${string/$search/$replace}
-          echo "DATABASE_URL=$replaced" >> $GITHUB_ENV
-
-      - name: test feature - ${{ matrix.feature }} - ${{ matrix.clientEngine }}
-        uses: nick-invision/retry@v3
-        with:
-          timeout_minutes: 10
-          max_attempts: 3
-          command: bash .github/scripts/test-project.sh ${{ github.job }} ${{ matrix.feature }}
-
-      - name: notify-slack
-        if: failure()
-        run: bash .github/slack/notify-failure.sh ${{ github.job }} ${{ matrix.feature }}
 
       - name: Set test specific DATABASE_URL
         run: |
