--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -1703,13 +1703,10 @@ jobs:
     concurrency: ${{ github.job }}-${{ matrix.runtime }}-${{ matrix.clientEngine }}
     env:
       RUNTIMES_DENO_DATABASE_URL: ${{ secrets.DATAPROXY_COMMON_URL_SOURCE }}
-      
+
     steps:
-      - uses: actions/checkout@v4      
-      
-      - name: Define Client Engine Type to test
-        run: echo "PRISMA_CLIENT_ENGINE_TYPE=${{ matrix.clientEngine }}" >> $GITHUB_ENV    
-        
+      - uses: actions/checkout@v4
+
       - uses: pnpm/action-setup@v3.0.0
         with:
           version: 8
@@ -1724,6 +1721,19 @@ jobs:
         uses: denoland/setup-deno@v1
         with:
           deno-version: v1.44.2
+
+      - name: Define Client Engine Type to test
+        run: echo "PRISMA_CLIENT_ENGINE_TYPE=${{ matrix.clientEngine }}" >> $GITHUB_ENV
+
+      - name: Install Dependencies
+        run: pnpm install
+
+      - name: test ${{ matrix.runtime }}
+        run: bash .github/scripts/test-project.sh ${{ github.job }} ${{ matrix.runtime }}
+
+      - name: notify-slack
+        if: failure()
+        run: bash .github/slack/notify-failure.sh ${{ github.job }} ${{ matrix.runtime }}
       
       
   process-managers:
