ci: try engines from temp endpoint
Related to https://github.com/prisma/team-orm/issues/1163

See similar prisma/prisma PR https://github.com/prisma/prisma/pull/24556

--- a/.github/workflows/optional-test.yaml
+++ b/.github/workflows/optional-test.yaml
@@ -33,7 +33,10 @@ env:
   ##
   SLACK_WEBHOOK_URL_OPTIONAL_TESTS_SUCCESS: ${{ secrets.SLACK_WEBHOOK_URL_OPTIONAL_TESTS_SUCCESS }}
   SLACK_WEBHOOK_URL_OPTIONAL_TESTS_FAILING: ${{ secrets.SLACK_WEBHOOK_URL_OPTIONAL_TESTS_FAILING }}
-
+  # Temporary override for the mirror used by the engines
+  PRISMA_ENGINES_MIRROR: 'https://pub-4c8d0335265c4484a8734643b596ecb2.r2.dev'
+  DEBUG: 'prisma:fetch-engine*'
+  
 defaults:
   run:
     # this makes windows use bash as well, which makes `...  >> $GITHUB_ENV` work there
