--- a/docker/alpine-3.17-arm64-openssl-3.0.x/Dockerfile
+++ b/docker/alpine-3.17-arm64-openssl-3.0.x/Dockerfile
@@ -14,12 +14,14 @@ RUN if [ -e /lib/libssl.so.1.1 ]; then echo 'OpenSSL 1.1 must not be installed (
 
 # expected target platform for Prisma, retrieved by `prisma -v`
 ARG EXPECTED_PRISMA_TARGET_PLATFORM="linux-musl-arm64-openssl-3.0.x"
+ARG PRISMA_ENGINES_MIRROR
 ARG PRISMA_CLIENT_ENGINE_TYPE
 ARG PRISMA_CLI_QUERY_ENGINE_TYPE
 ARG CI
 ARG DEBUG
 ARG PRISMA_TELEMETRY_INFORMATION
 
+ENV PRISMA_ENGINES_MIRROR=$PRISMA_ENGINES_MIRROR
 ENV PRISMA_CLIENT_ENGINE_TYPE=$PRISMA_CLIENT_ENGINE_TYPE
 ENV PRISMA_CLI_QUERY_ENGINE_TYPE=$PRISMA_CLI_QUERY_ENGINE_TYPE
 ENV CI=$CI
