--- a/docker/debian-bullseye-amd64-openssl-1.1.x-tls/Dockerfile
+++ b/docker/debian-bullseye-amd64-openssl-1.1.x-tls/Dockerfile
@@ -32,12 +32,14 @@ RUN if ! node -e 'if (process.versions.openssl.split(".")[0] < 3) process.exit(1
 
 # expected target platform for Prisma, retrieved by `prisma -v`
 ARG EXPECTED_PRISMA_TARGET_PLATFORM="debian-openssl-1.1.x"
+ARG PRISMA_ENGINES_MIRROR
 ARG PRISMA_CLIENT_ENGINE_TYPE
 ARG PRISMA_CLI_QUERY_ENGINE_TYPE
 ARG CI
 ARG DEBUG
 ARG PRISMA_TELEMETRY_INFORMATION
 
+ENV PRISMA_ENGINES_MIRROR=$PRISMA_ENGINES_MIRROR
 ENV PRISMA_CLIENT_ENGINE_TYPE=$PRISMA_CLIENT_ENGINE_TYPE
 ENV PRISMA_CLI_QUERY_ENGINE_TYPE=$PRISMA_CLI_QUERY_ENGINE_TYPE
 ENV CI=$CI
