--- a/docker/ubuntu-20.04-amd64-openssl-1.1.x/Dockerfile
+++ b/docker/ubuntu-20.04-amd64-openssl-1.1.x/Dockerfile
@@ -32,12 +32,14 @@ RUN if [ -e /lib/${EXPECTED_UNAME_ARCH}-linux-gnu/libssl.so.3* ]; then echo "Ope
 
 # expected target platform for Prisma, retrieved by `prisma -v`
 ARG EXPECTED_PRISMA_TARGET_PLATFORM="debian-openssl-1.1.x"
+ARG PRISMA_ENGINES_MIRROR
 ARG PRISMA_CLIENT_ENGINE_TYPE
 ARG PRISMA_CLI_QUERY_ENGINE_TYPE
 ARG CI
 ARG DEBUG
 ARG PRISMA_TELEMETRY_INFORMATION
 
+ENV PRISMA_ENGINES_MIRROR=$PRISMA_ENGINES_MIRROR
 ENV PRISMA_CLIENT_ENGINE_TYPE=$PRISMA_CLIENT_ENGINE_TYPE
 ENV PRISMA_CLI_QUERY_ENGINE_TYPE=$PRISMA_CLI_QUERY_ENGINE_TYPE
 ENV CI=$CI
