feat(driver-adapter-wasm): add d1-vitest suite

--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -374,6 +374,7 @@ jobs:
           - d1-cf-basic
           - d1-cfpages-basic
           - d1-cfpages-nuxt
+          - d1-vitest
         clientEngine: ['wasm']
         os: [ubuntu-20.04]
     runs-on: ${{ matrix.os }}
