chore(driver-adapter-wasm): skip custom output test for d1-vitest

--- a/driver-adapters-wasm/d1-vitest/package.json
+++ b/driver-adapters-wasm/d1-vitest/package.json
@@ -7,7 +7,7 @@
     "email": "schiabel@prisma.io"
   },
   "scripts": {
-    "test": "NODE_OPTIONS='--experimental-vm-modules' vitest --run"
+    "test": "vitest --run"
   },
   "license": "MIT",
   "dependencies": {
