--- a/driver-adapters-wasm/d1-vitest/package.json
+++ b/driver-adapters-wasm/d1-vitest/package.json
@@ -11,13 +11,13 @@
   },
   "license": "MIT",
   "dependencies": {
-    "@prisma/adapter-d1": "5.16.0-integration-vitest-workaround.1",
-    "@prisma/client": "5.16.0-integration-vitest-workaround.1"
+    "@prisma/adapter-d1": "5.16.0-dev.62",
+    "@prisma/client": "5.16.0-dev.62"
   },
   "devDependencies": {
     "@cloudflare/vitest-pool-workers": "0.4.5",
     "@cloudflare/workers-types": "4.20240614.0",
-    "prisma": "5.16.0-integration-vitest-workaround.1",
+    "prisma": "5.16.0-dev.62",
     "typescript": "^5.5.0",
     "vitest": "1.5.0",
     "wrangler": "3.61.0"
