fix(docker): fix unbound variable PRISMA_ENGINES_MIRROR

--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -33,7 +33,7 @@ env:
   DATABASE_URL_POSTGRES_TEMPLATE: ${{ secrets.DATABASE_URL_POSTGRES_TEMPLATE }}
   NEXT_TELEMETRY_DISABLED: 1
   # To override the endpoint used by fetch-engine to download engines artifacts:
-  # PRISMA_ENGINES_MIRROR: 'https://pub-4c8d0335265c4484a8734643b596ecb2.r2.dev/'
+  PRISMA_ENGINES_MIRROR: '' # 'https://pub-4c8d0335265c4484a8734643b596ecb2.r2.dev/'
   # These logs will make it easy to verify that `PRISMA_ENGINES_MIRROR` is used
   # DEBUG: 'prisma:fetch-engine*'
 
