fix(driver-adapters): prevent automatic updates of vitest

--- a/renovate.json
+++ b/renovate.json
@@ -22,7 +22,8 @@
     "@prisma/pg-worker",
     "@prisma/adapter-neon",
     "@prisma/adapter-libsql",
-    "@prisma/adapter-d1"
+    "@prisma/adapter-d1",
+    "vitest"
   ],
   "packageRules": [
     {
