--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -485,16 +485,22 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
+        node: [16]
         packager:
           - npm
           - npm-global
           - pnpm
           - pnpm-workspaces-custom-output
           - pnpm-workspaces-default-output
-          - yarn
-          - yarn-workspaces
-          - yarn3-without-pnp
-          - yarn3-workspaces-pnp
+        include:
+          - packager: yarn
+            node: 18
+          - packager: yarn-workspaces
+            node: 18
+          - packager: yarn3-without-pnp
+            node: 18
+          - packager: yarn3-workspaces-pnp
+            node: 18 
         clientEngine: [library] #['library', 'binary']
         os: [ubuntu-20.04]
     runs-on: ${{ matrix.os }}
@@ -518,7 +524,7 @@ jobs:
 
       - uses: actions/setup-node@v4
         with:
-          node-version: 16
+          node-version: ${{ matrix.node }}
           cache: |
             ${{
               contains(matrix.packager, 'yarn') && 'yarn' ||
@@ -770,14 +776,17 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
+        node: [16]
         platform:
           - vercel-node-builder
           - vercel-cli
-          - vercel-with-redwood
           - vercel-with-nextjs
           - vercel-with-nextjs-caching
         clientEngine: ['library', 'binary']
         os: [ubuntu-20.04]
+        include:
+          - platform: vercel-with-redwood
+            node: 18
     runs-on: ${{ matrix.os }}
     concurrency: ${{ github.job }}-${{ matrix.platform }}-${{ matrix.clientEngine }}
     env:
@@ -806,7 +815,7 @@ jobs:
 
       - uses: actions/setup-node@v4
         with:
-          node-version: 16
+          node-version: ${{ matrix.node }}
           cache: |
             ${{
               contains(matrix.platform, 'redwood') && 'yarn' ||
